# win-permissions

./: Cargo.toml
src/: lib.rs  security_descriptor.rs  sid.rs
src/acl/: ace.rs  mod.rs
