[package]
name = "win-permissions"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Janito Vaqueiro Ferreira Filho <janito@mullvad.net>"]
description = "Safe abstraction over Windows ACL interface"
license = "GPL-3.0"

[dependencies]
bitflags = "1.0"
winapi = { version = "0.3", features = ["securitybaseapi", "sddl", "winbase", "winnt"] }
